[gd_scene load_steps=3 format=3 uid="uid://dhasvgihy7wvj"]

[ext_resource type="Script" uid="uid://cv6rsnbv4sag4" path="res://ui/player_inventory_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlayerInventoryUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="InventoryPanel" type="Panel" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 195.0
offset_top = -300.0
offset_right = 745.0
offset_bottom = 300.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridPanel" type="VBoxContainer" parent="InventoryPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="InventoryPanel/MarginContainer/HBoxContainer/GridPanel"]
layout_mode = 2
text = "INVENTORY (8x6)"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="InventoryPanel/MarginContainer/HBoxContainer/GridPanel"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="StatsPanel" type="VBoxContainer" parent="InventoryPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="InventoryPanel/MarginContainer/HBoxContainer/StatsPanel"]
layout_mode = 2
text = "STATS"
horizontal_alignment = 1

[node name="WeightLabel" type="Label" parent="InventoryPanel/MarginContainer/HBoxContainer/StatsPanel"]
layout_mode = 2
text = "Weight: 0.0 / 60.0 kg"
